--- a/Bookdown/_bookdown.yml
+++ b/Bookdown/_bookdown.yml
@@ -1,6 +1,6 @@
 book_filename: "bookdown-start"
 chapter_name: " "
-repo: https://github.com/seankross/bookdown-start
+repo: https://github.com/ogcruz/ogcruz.github.io/Bookdown
 output_dir: docs
 rmd_files: ["ecologico_book.Rmd", "capitulo1.Rmd", "capitulo2.Rmd"]
 clean: [packages.bib, bookdown.bbl]
